Fix date initialization and display bugs

--- a/app/src/main/res/layout/crime_details.xml
+++ b/app/src/main/res/layout/crime_details.xml
@@ -30,19 +30,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/btn_suspect"
-        android:text="Choose Target"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/btn_suspect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Choose Target" />
+
+        <Button
+            android:layout_weight="1"
+            android:id="@+id/btn_send_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send Report" />
+
+    </LinearLayout>
+
 
     <Button
-        android:id="@+id/btn_send_message"
-        android:text="Send Report"
-        android:layout_width="match_parent"
+        android:id="@+id/btn_finish"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp" />
+        android:text="Finish!" />
 </LinearLayout>
