--- a/app/src/main/res/layout/view_crime_and_photo.xml
+++ b/app/src/main/res/layout/view_crime_and_photo.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Enter a title for this crime" />
+            android:hint="Enter a title for this photo" />
 
     </LinearLayout>
 
